# scez-ng

./: COPYRIGHT  COPYRIGHT.sio  Makefile.am  Makefile.in  PORTING.sio  README  README.sio  TODO  VERSION.sio  config.h.in  configure  configure.in  scez.lsm  scez.spec.in
apps/: Makefile.am  Makefile.in  bcupload.c  cafeman.c  cardcheck.c  cfupload.c  crdetect.c  cttest.c  cyflexman.c  filescan.c  flexpasswd.c  gendivkey.c  getcert.c  scanclains.c  scdir.c  scsh.c  scwait.c  season.c  simdump.c  simman.c  simman.h  simparse.c
autom4te.cache/: traces.0  traces.1
config/: config-dir
doc/: Makefile.am  Makefile.in  example.c  scez.info  scez.texi
misc/bc/test/: compile.bat  test.bas  testc.img  teste.img
misc/libdes/: des.lib  des.mak  libdes-4.01-shared.patch  libdes-4.01.spec
misc/pkcs15/: p15cryptoflex.c  p15cryptoflex.h  p15cryptoflex.txt  p15general.h
palm/: Libc.prc  Makefile.palm  makeprc  makestub
palm/pilotSSLeay-2.01/: ChangeLog  README  des.exp  libdes.sa
palm/scdir/: Makefile  callback.h  scdir.c  scdir.h  scdir.rcp
perl5/: Makefile  README  scez.i  tpscez.pl
scez/: Makefile.am  Makefile.in  Makefile.orig  scctapi.c  scctapi.h  scgeneral.c  scgeneral.h  scinternal.h  scmacros.h  scpts.c  scpts.h  screader.c  screader.h  scsmartcard.c  scsmartcard.h  sct0.c  sct0.h  sct1.c  sct1.h
scez/cards/: Makefile  Makefile.am  Makefile.in  libscez_cards.la  scbasiccard.c  scbasiccard.h  scbasiccard.lo  sccarteb.c  sccarteb.h  sccarteb.lo  sccryptoflex.c  sccryptoflex.h  sccryptoflex.lo  sccyberflex.c  sccyberflex.h  sccyberflex.lo  sceasycheck.c  sceasycheck.h  sceasycheck.lo  scgeldkarte.c  scgeldkarte.h  scgeldkarte.lo  scgpk4000.c  scgpk4000.h  scgpk4000.lo  scgsmsim.c  scgsmsim.h  scgsmsim.lo  scmfc.c  scmfc.h  scmfc.lo  scmultiflex.c  scmultiflex.h  scmultiflex.lo  scopenplatform.c  scopenplatform.h  scopenplatform.lo  scpayflex.c  scpayflex.h  scpayflex.lo  (+15 more)
scez/cards/.deps/: scbasiccard.Plo  sccarteb.Plo  sccryptoflex.Plo  sccyberflex.Plo  sceasycheck.Plo  scgeldkarte.Plo  scgpk4000.Plo  scgsmsim.Plo  scmfc.Plo  scmultiflex.Plo  scopenplatform.Plo  scpayflex.Plo  scproton.Plo  scquick.Plo  scsmartcafe.Plo  scstarcos.Plo  sctcos.Plo
scez/readers/: Makefile  Makefile.am  Makefile.in  libscez_readers.la  scacr20.c  scacr20.h  scacr20.lo  scbluedot.c  scbluedot.h  scdumbmouse.c  scdumbmouse.h  scdumbmouse.lo  scgcr400.c  scgcr400.h  scgcr400.lo  scgpr400.c  scgpr400.h  scgpr400.lo  scintertex.c  scintertex.h  scintertex.lo  screflex60.c  screflex60.h  screflex60.lo  sctowitoko.c  sctowitoko.h  sctowitoko.lo
scez/readers/.deps/: scacr20.Plo  scdumbmouse.Plo  scgcr400.Plo  scgpr400.Plo  scintertex.Plo  screflex60.Plo  sctowitoko.Plo
sio/: Makefile.am  Makefile.in  platform.h  sio.c  sio.h  siolight.c  siolight.h  slog.c  slog.h  varadic.h
test/: Makefile.am  Makefile.in  tacr20.c  tbasiccard.c  tbluedot.c  tbradesco.c  tcfkeygen.c  tcryptoflex.c  tctapi.c  tcyberflex.c  tdumbmouse.c  tgpk4000.c  tgsmsim.c  tmultiflex.c  treflex60.c  tsmartcafe.c  tsmartcard.c  ttcos.c  ttowitoko.c
txt/: atrs.txt  bradesco.txt  cash.txt  cryptoflex-w2k.txt  cttest.txt  dumbmouse.txt  geldkarte.txt  gemclub.txt  hierarchy.ps  multiflex.tex  netkey.txt  newfunctionstr-2.txt  newfunctionstr.txt  quick.txt  scez.tex  simman.txt  sio.html  timings.txt  xerox-mfc41.txt
windows/: Makefile.vc5
