# $Id: Makefile.am 1071 2002-01-25 11:27:47Z zwiebeltu $

SUBDIRS = sio scez test apps doc

EXTRA_DIST = \
	AUTHORS \
	COPYING \
	COPYRIGHT \
	COPYRIGHT.sio \
	ChangeLog \
	INSTALL \
	PORTING.sio \
	README \
	README.sio \
	TODO \
	VERSION.sio \
	bootstrap \
	scez.lsm \
	scez.spec.in

AUTOMAKE_OPTIONS = foreign

