# $Id: Makefile.am 1056 2001-09-17 23:20:37Z m $

lib_LTLIBRARIES = libsio.la

libsio_la_SOURCES = \
	sio.c \
	slog.c

#libsio_la_LIBADD = @LTLIBOBJS@

libsio_la_LDFLAGS = -version-info 1:0:0

EXTRA_DIST = \
	platform.h \
	sio.c \
	sio.h \
	siolight.c \
	siolight.h \
	slog.c \
	slog.h \
	varadic.h

