# $Id: Makefile.am 1617 2005-11-03 17:41:39Z laforge $

INCLUDES = -I$(top_srcdir)/scez -I$(top_srcdir)/sio
needed_libs = @JIBAPILIB@ ../scez/libscez.la ../sio/libsio.la

bin_PROGRAMS = \
	tacr20 \
	tbasiccard \
	tbluedot \
	tbradesco \
	tcfkeygen \
	tcryptoflex \
	tctapi \
	tcyberflex \
	tdumbmouse \
	tgpk4000 \
	tgsmsim \
	tmultiflex \
	treflex60 \
	tsmartcafe \
	tsmartcard \
	ttcos \
	ttowitoko

tacr20_LDADD = $(needed_libs)
tacr20_SOURCES = tacr20.c
tbasiccard_LDADD = $(needed_libs)
tbasiccard_SOURCES = tbasiccard.c
tbluedot_LDADD = $(needed_libs)
tbluedot_SOURCES = tbluedot.c
tbradesco_LDADD = $(needed_libs)
tbradesco_SOURCES = tbradesco.c
tcfkeygen_LDADD = $(needed_libs)
tcfkeygen_SOURCES = tcfkeygen.c
tcryptoflex_LDADD = $(needed_libs)
tcryptoflex_SOURCES = tcryptoflex.c
tctapi_LDADD = $(needed_libs)
tctapi_SOURCES = tctapi.c
tcyberflex_LDADD = $(needed_libs)
tcyberflex_SOURCES = tcyberflex.c
tdumbmouse_LDADD = $(needed_libs)
tdumbmouse_SOURCES = tdumbmouse.c
tgpk4000_LDADD = $(needed_libs)
tgpk4000_SOURCES = tgpk4000.c
tgsmsim_LDADD = $(needed_libs)
tgsmsim_SOURCES = tgsmsim.c
tmultiflex_LDADD = $(needed_libs)
tmultiflex_SOURCES = tmultiflex.c
treflex60_LDADD = $(needed_libs)
treflex60_SOURCES = treflex60.c
tsmartcafe_LDADD = $(needed_libs)
tsmartcafe_SOURCES = tsmartcafe.c
tsmartcard_LDADD = $(needed_libs)
tsmartcard_SOURCES = tsmartcard.c
ttcos_LDADD = $(needed_libs)
ttcos_SOURCES = ttcos.c
ttowitoko_LDADD = $(needed_libs)
ttowitoko_SOURCES = ttowitoko.c

EXTRA_DIST = 

